# triangle-demo-app

./: .env.sample  .gitignore  LICENSE-3rdparty.csv  LICENSE.md  NOTICE  README.md  ca.crt  ca.key  ca.srl  cleanup.sh  config.yaml  datadog.sh  install-datadog.sh  logs.txt  port-forward.sh  run.sh  server.crt  server.csr  server.key
charts/base-tower/: Chart.yaml  values.yaml
charts/base-tower/templates/: _helpers.tpl  deployment.yaml  service.yaml
charts/datadog/: Chart.yaml  configmap.yaml  datadog-agent.yaml  otel-config.yaml
charts/frontend/: Chart.yaml  values.yaml
charts/ingress/: Chart.yaml  values.yaml
charts/locator/: Chart.yaml  values.yaml
charts/mongodb/: Chart.yaml  values.yaml
charts/otel/: Chart.yaml
charts/shared/: Chart.yaml  values.yaml
charts/signal-source/: Chart.yaml  values.yaml
charts/simulation/: Chart.yaml  values.yaml
charts/world-simulator/: Chart.yaml  values.yaml
k8s/: base-tower-service.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  simulator-deployment.yaml  simulator-service.yaml  triangle-service.yaml
scripts/: cleanup.sh  lib.sh
scripts/modules/: config.sh  docker.sh  k8s.sh  logging.sh
services/base-tower/: Dockerfile  go.mod  main.go
services/frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
services/locator/: Dockerfile  README.md  go.mod  go.sum  main.go
services/signal-source/: Cargo.toml  Dockerfile  README.md
services/signal-source/src/: health.rs  main.rs  mongo.rs  signal.rs  signal_loop.rs
services/simulation/: Dockerfile  README.md  requirements.txt
services/world-simulator/: .env.production  Dockerfile  index.html  nginx.conf  package.json  start.sh  vite.config.js
(+60 files in other folders)
