[package]
name = "signal-source"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = {version = "3.2"}
tokio = { version = "1", features = ["full"] }
rand = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
