[package]
name = "signal-source"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signal-source"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
mongodb = {version = "3.2"}
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.29"
